--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ecohealth-ngo1",
+  "homepage": "https://0300hrs.github.io/Kathylinx-Initiative",
   "private": true,
   "version": "0.0.0",
   "type": "module",
